PasswordResetTool 1.2 - Unreleased


PasswordResetTool 1.1 - Released March 26, 2008

  - Fixed browser tests.
    [hannosch]

  - Set correct i18n:domain on subject, fixes #7217.
    [martior]

  - Move trunk into the egg.
    [wichert]

  - Removed i18n folder. Translations are part of the PloneTranslations
    product for some time now.
    [hannosch]

PasswordResetTool 1.0

  - Providing 'fullname' now for email notification. This does not really
    close http://dev.plone.org/plone/ticket/6680, but makes it possible to
    use the information the user provided in the mail notification (and its
    translations).
    [gogo] 

PasswordResetTool 1.0rc2

  - Fixed four occurrences of the term login name which wasn't used anywhere so
    far. We only use user id and user name.
    [hannosch]

PasswordResetTool 1.0rc1

  - Updated tests to work with Zope 2.10 / Plone 3.0.
    [hannosch]

  - Converted mail_password_template from a dtml page to a Page Template, as
    dtml pages cannot be translated anymore.
    [hannosch]

  - If available use the email_charset property instead of default_charset to
    encode mails.
    [hannosch]

  - Added the portal name to the subject in the registered_notify_template.pt,
    so it's easier to distinguish those mails for various websites. This
    closes http://dev.plone.org/plone/ticket/5242.
    [hannosch]

  - Replaced some last occurrences of the term member with user.
    [hannosch]

PasswordResetTool 0.4.2

  - Fixed some minor whitespace issue in registered_notify_template.pt.
    [hannosch]

  - allow password reset token to be passed in, in cases where we might not
    have the permission to request a reset from within the template
    [rafrombrc]

PasswordResetTool 0.4.1

  - protect requestRest method of the tool so it can not be called anonymously
    through the web interface

PasswordResetTool 0.4
  - Removed unused import in install code
  - use virtual host forwarded IP if present