@@ -1,5 +1,7 @@
 PasswordResetTool 1.2 - Unreleased
 
+  - Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
+    [elro]
 
 PasswordResetTool 1.1 - Released March 26, 2008
 
